<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.FilmographyFragment">

    <ImageButton
        android:id="@+id/btnBackFilmography"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="26dp"
        android:background="@color/transparent"
        android:padding="16dp"
        android:src="@drawable/ic_back_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textFilmography" />

    <TextView
        android:id="@+id/textFilmography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="22dp"
        android:text="@string/filmography"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textNameActor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFilmography"
        tools:text="Кристина Асмус" />

    <HorizontalScrollView
        android:id="@+id/btn_layout_filmography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNameActor">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_actor"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.33"
                android:text="@string/actor"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="56dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/galleryBackBtn"
                app:strokeColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_actor_dubbing"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="0.33"
                android:text="@string/dubbing_actor"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="56dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/galleryBackBtn"
                app:strokeColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_playing_himself"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:layout_weight="0.34"
                android:maxLines="1"
                android:text="@string/actor_playing_himself"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="56dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/galleryBackBtn"
                app:strokeColor="@color/black" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RVFilmography"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_layout_filmography"
        tools:listitem="@layout/staff_film" />


</androidx.constraintlayout.widget.ConstraintLayout>