<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    app:cardCornerRadius="32dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardBottomSheet"
                android:layout_width="111dp"
                android:layout_height="156dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="48dp"
                android:visibility="visible"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/posterBottomSheet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    tools:srcCompat="@drawable/test_image" />

                <TextView
                    android:id="@+id/ratingBottomSheet"
                    android:layout_width="17dp"
                    android:layout_height="10dp"
                    android:layout_gravity="top|start"
                    android:layout_margin="6dp"
                    android:background="@drawable/shape_radius"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="7sp"
                    tools:ignore="SmallSp"
                    tools:text="10.0" />

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/closeBtnBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:background="@color/transparent"
                android:padding="8dp"
                app:layout_constraintBottom_toTopOf="@+id/cardBottomSheet"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_cross" />

            <TextView
                android:id="@+id/nameBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/cardBottomSheet"
                app:layout_constraintStart_toEndOf="@id/cardBottomSheet"
                app:layout_constraintTop_toTopOf="@id/cardBottomSheet"
                tools:text="Топи" />

            <TextView
                android:id="@+id/yearGenreBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@id/nameBottomSheet"
                app:layout_constraintTop_toBottomOf="@id/nameBottomSheet"
                tools:text="2021, триллер" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/cardBottomSheet" />

            <ImageView
                android:id="@+id/imageAddCollection"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="26dp"
                android:layout_marginVertical="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialDivider1"
                app:srcCompat="@drawable/ic_add_in_collection" />

            <TextView
                android:id="@+id/textAddInCollection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/add_in_collection"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/imageAddCollection"
                app:layout_constraintTop_toTopOf="@id/imageAddCollection" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/imageAddCollection" />

            <CheckBox
                android:id="@+id/checkBoxWSBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="56dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialDivider2" />

            <TextView
                android:id="@+id/nameWSBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/checkBoxWSBottomSheet"
                app:layout_constraintStart_toEndOf="@id/checkBoxWSBottomSheet"
                app:layout_constraintTop_toTopOf="@id/checkBoxWSBottomSheet"
                android:text="@string/want_see" />

            <TextView
                android:id="@+id/countWSBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/nameWSBottomSheet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/nameWSBottomSheet"
                tools:text="4"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/checkBoxWSBottomSheet"/>

            <CheckBox
                android:id="@+id/checkBoxLikeBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="56dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialDivider3" />

            <TextView
                android:id="@+id/nameLikeBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/checkBoxLikeBottomSheet"
                app:layout_constraintStart_toEndOf="@id/checkBoxLikeBottomSheet"
                app:layout_constraintTop_toTopOf="@id/checkBoxLikeBottomSheet"
                android:text="@string/my_favorite" />

            <TextView
                android:id="@+id/countLikeBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/nameLikeBottomSheet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/nameLikeBottomSheet"
                tools:text="4"
                android:layout_marginEnd="16dp"/>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/materialDivider4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/checkBoxLikeBottomSheet"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/collectionsRVBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialDivider4"
                tools:listitem="@layout/collection_bottom_sheet" />

            <ImageView
                android:id="@+id/ivAddCollection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="56dp"
                android:src="@drawable/ic_plus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/collectionsRVBottomSheet" />

            <TextView
                android:id="@+id/textAddCollection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Создать свою коллекцию"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/ivAddCollection"
                app:layout_constraintStart_toEndOf="@id/ivAddCollection"
                app:layout_constraintTop_toTopOf="@id/ivAddCollection" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>